--- a/config/ekf.yaml
+++ b/config/ekf.yaml
@@ -9,7 +9,7 @@ ekf_filter_node:
     odom0_config: [true, true, false,
                    false, false, false,
                    false, false, false,
-                   false, false, false]
+                   false, false, true]
 
     use_control: false
     print_diagnostics: true
